Add q2 df and rename columns

--- a/Bank_Project.ipynb
+++ b/Bank_Project.ipynb
@@ -25,7 +25,25 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('Data/BHCF20250331.txt', delimiter = '^')"
+    "df = pd.read_csv('Data/BHCF20250331.txt', delimiter = '^')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/17/1lp6v8rx7hg46v35nrbf4mk00000gn/T/ipykernel_7843/3343375304.py:1: DtypeWarning: Columns (2088,2089,2091,2092,2094,2095,2098,2099,2100,2101,2132,2141,2151,2152,2153,2154,2155,2156,2157,2158,2160,2161,2162,2163,2165,2166,2167,2171,2173,2174,2177,2178,2179,2181,2183,2184,2185,2200,2201,2202,2203,2204,2205,2206,2207,2208,2215,2216,2217,2219,2220,2221,2222) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  dfq2 = pd.read_csv('Data/BHCF20250630 3.txt', delimiter = '^')\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfq2 = pd.read_csv('Data/BHCF20250630 3.txt', delimiter = '^')"
    ]
   },
   {
@@ -116,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +160,8 @@
    ],
    "source": [
     "renamed_df = df.rename(columns=column_mapper)\n",
-    "print(renamed_df.columns)"
+    "renamed_dfq2 = dfq2.rename(columns=column_mapper)\n",
+    "print(renamed_dfq2.columns)"
    ]
   }
  ],
