Union both quarters and group by

--- a/Bank_Project.ipynb
+++ b/Bank_Project.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,104 @@
    "source": [
     "renamed_df = df.rename(columns=column_mapper)\n",
     "renamed_dfq2 = dfq2.rename(columns=column_mapper)\n",
-    "print(renamed_dfq2.columns)"
+    "print(renamed_dfq2.columns.str.contains('NAME'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       20250630\n",
+      "1       20250630\n",
+      "2       20250630\n",
+      "3       20250630\n",
+      "4       20250630\n",
+      "          ...   \n",
+      "3744    20250630\n",
+      "3745    20250630\n",
+      "3746    20250630\n",
+      "3747    20250630\n",
+      "3748    20250630\n",
+      "Name: REPORTING DATE (CC;YR;MO;DA), Length: 3749, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print(renamed_dfq2.columns.str.contains('NAME'))\n",
+    "\n",
+    "search_string = 'DATE'\n",
+    "matching_columns = renamed_dfq2.columns[renamed_dfq2.columns.str.contains(search_string)]\n",
+    "#print(matching_columns)\n",
+    "print(renamed_dfq2['REPORTING DATE (CC;YR;MO;DA)'])\n",
+    "# i = 0\n",
+    "# for name in renamed_dfq2['ENTITY SHORT NAME']:\n",
+    "#     i += 1\n",
+    "#     if i > 50:\n",
+    "#         break\n",
+    "#     else:\n",
+    "#         print(name)\n",
+    "target_bank = 'FIRST NAT OF NE'\n",
+    "#print(renamed_dfq2[renamed_dfq2[\"ENTITY SHORT NAME\"] == target_bank])\n",
+    "#print(renamed_df['AVERAGE TOTAL ASSETS (NET OF DEDUCTIONS)'].loc[2])\n",
+    "#print(renamed_dfq2['AVERAGE TOTAL ASSETS (NET OF DEDUCTIONS)'].loc[5])\n",
+    "#print(renamed_df[\"ENTITY SHORT NAME\"].loc[2])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok, so what needs to happen now? I have two dataframes both of which have the same columns and I want to mix them together in such a way that I can compare values across time\n",
+    "\n",
+    "I have a reporting date which matches the file date which is good. I could union the data and use the bank name and reporting date to compare over time?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Attempt to union\n",
+    "union_df = pd.concat([renamed_df, renamed_dfq2], ignore_index=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ENTITY SHORT NAME    AVERAGE TOTAL ASSETS (NET OF DEDUCTIONS)  REPORTING DATE (CC;YR;MO;DA)\n",
+      "1867 WESTERN FC      4556415.0                                 20250331                        1\n",
+      "                     4621317.0                                 20250630                        1\n",
+      "1ST SOURCE CORP      8898363.0                                 20250331                        1\n",
+      "                     8978873.0                                 20250630                        1\n",
+      "ACNB CORP            2925430.0                                 20250331                        1\n",
+      "                                                                                              ..\n",
+      "WOODFOREST FNCL GRP  9620628.0                                 20250630                        1\n",
+      "WSFS FNCL CORP       20289437.0                                20250331                        1\n",
+      "                     20428926.0                                20250630                        1\n",
+      "WTB FC               10605065.0                                20250630                        1\n",
+      "                     10613127.0                                20250331                        1\n",
+      "Name: count, Length: 765, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print(union_df[union_df['ENTITY SHORT NAME'] == target_bank])\n",
+    "filtered_df = union_df[['ENTITY SHORT NAME','AVERAGE TOTAL ASSETS (NET OF DEDUCTIONS)','REPORTING DATE (CC;YR;MO;DA)']].copy()\n",
+    "#print(filtered_df.head())\n",
+    "print(filtered_df.groupby(['ENTITY SHORT NAME']).value_counts())"
    ]
   }
  ],
