Add special column disambiguation to column mapper, polish and comment

--- a/Bank_Project.ipynb
+++ b/Bank_Project.ipynb
@@ -107,80 +107,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create mapper\n",
-    "'''Current issue is that we have multiple instances of certain columns like total assets and total capital'''\n",
+    "\n",
+    "\n",
     "column_mapper = {}\n",
+    "\n",
+    "#Columns that appear across multiple types of companies with the same balance sheet name, need to keep code to disambiguate\n",
+    "special_columns = [\n",
+    "    'TOTAL ASSETS',\n",
+    "    'TOTAL EQUITY',\n",
+    "    'TOTAL EQUITY CAPITAL'\n",
+    "    ]\n",
+    "\n",
     "def get_name_from_full_code(fullcode, df):\n",
+    "    '''get column name from full code found in data dictionary'''\n",
     "    column = df['Item Name'][df['Full Code'] == fullcode]\n",
     "    col_name = column.iloc[0]\n",
     "    return col_name\n",
-    "#print(short_dddf['Item Name'][short_dddf['Full Code'] == 'AAAA2170'])\n",
-    "#print(get_name_from_full_code('AAAA8274',short_dddf))\n",
-    "#column_mapper['AAAA2170'] = get_name_from_full_code('AAAA2170',short_dddf)\n",
-    "#print(type(short_dddf['Full Code']))\n",
     "\n",
     "\n",
-    "for code3 in short_dddf['Full Code']:\n",
-    "    # print(type(code3))\n",
-    "    column_mapper[code3] = get_name_from_full_code(code3,short_dddf)\n",
-    "    #print(get_name_from_full_code(code3,short_dddf))\n",
-    "    # print('done')\n",
+    "#Loop over short data dictionary and populate column mapper with name\n",
+    "for code in short_dddf['Full Code']:\n",
+    "    column_mapper[code] = get_name_from_full_code(code,short_dddf)\n",
+    "\n",
+    "\n",
+    "def disambiguate_column_mapper(column_mapper, special_columns):\n",
+    "    '''Loop over column mapper and replace ambigious columns (found in special_columns)'''\n",
+    "\n",
+    "    for key,value in column_mapper.items():\n",
+    "        if value in special_columns:\n",
+    "            column_mapper[key] = f'{value}: {key}' \n",
+    "    return column_mapper\n",
+    "\n",
+    "#Final column mapper\n",
+    "disambig_column_mapper = disambiguate_column_mapper(column_mapper, special_columns)\n",
+    "\n",
+    "#check to make sure columns have been renamed\n",
+    "\n",
+    "#for key,value in disambig_column_mapper.items():\n",
+    "    #if 'TOTAL EQUITY CAPITAL' in str(value):\n",
+    "        #print(value)\n",
+    "    \n",
+    "\n",
     "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['RSSD ID', 'REPORTING DATE (CC;YR;MO;DA)', 'DATE START', 'DATE END',\n",
-      "       'PRIMARY ACTIVITY CODE', 'FEDERAL RESERVE REGULATORY DISTRICT CODE',\n",
-      "       'BANK COUNT', 'QUARTERLY AVERAGE OF TOTAL ASSETS',\n",
-      "       'QUARTERLY AVERAGE OF EARNING ASSETS',\n",
-      "       'QUARTERLY AVERAGES OF LOANS AND LEASES',\n",
-      "       ...\n",
-      "       'TWENTIETH TEXT OF NOTES TO ITEMS ON INCOME STATEMENT',\n",
-      "       'URL FOR THE REPORTING BANK HOLDING COMPANY'S WEB PAGE THAT DISPLAYS RISK DISCLOSURES; INCLUDING THOSE ABOUT CREDIT AND MARKET RISK',\n",
-      "       'DISCONTINUED OPERATIONS AND APPLICABLE INCOME TAX EFFECT; FIELD 1',\n",
-      "       'DISCONTINUED OPERATIONS AND APPLICABLE INCOME TAX EFFECT; APPLICABLE INCOME TAX EFFECT; FIELD 1',\n",
-      "       'ENTITY'S WORLD WIDE WEB ADDRESS', 'PHYSICAL ZIP/FOREIGN MAILING CODE',\n",
-      "       'NAME OF EXTERNAL AUDITING FIRM', 'CITY', 'STATE ABBREVIATION',\n",
-      "       'ZIP CODE'],\n",
-      "      dtype='object', length=2224)\n"
+      "[False False False ... False False False]\n"
      ]
     }
    ],
    "source": [
-    "renamed_df = df.rename(columns=column_mapper)\n",
-    "renamed_dfq2 = dfq2.rename(columns=column_mapper)\n",
-    "print(renamed_dfq2.columns.str.contains('NAME'))"
+    "renamed_df = df.rename(columns=disambig_column_mapper)\n",
+    "renamed_dfq2 = dfq2.rename(columns=disambig_column_mapper)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['TOTAL EQUITY CAPITAL',\n",
+      "Index(['TOTAL EQUITY CAPITAL: BHCK3210',\n",
       "       'FIRST COMPONENT OF OTHER SIGNIFICANT OFF-BALANCE SHEET ITEMS THAT IS OVER 25% OF TOTAL EQUITY CAPITAL (3210)',\n",
       "       'SECOND COMPONENT OF OTHER SIGNIFICANT OFF-BALANCE SHEET ITEMS THAT IS OVER 25% OF TOTAL EQUITY CAPITAL (3210)',\n",
       "       'THIRD COMPONENT OF OTHER SIGNIFICANT OFF-BALANCE SHEET ITEMS THAT IS OVER 25% OF TOTAL EQUITY CAPITAL (3210)',\n",
       "       'FOURTH COMPONENT OF OTHER SIGNIFICANT OFF-BALANCE SHEET ITEMS THAT IS OVER 25% OF TOTAL EQUITY CAPITAL (3210)',\n",
       "       'TOTAL EQUITY CAPITAL INCLUDING NONCONTROLLING MINORITY INTERESTS IN CONSOLIDATED SUBSIDIARIES',\n",
-      "       'TOTAL EQUITY CAPITAL', 'TOTAL EQUITY CAPITAL', 'TOTAL EQUITY CAPITAL',\n",
+      "       'TOTAL EQUITY CAPITAL: BHCP3210', 'TOTAL EQUITY CAPITAL: BHCT3210',\n",
+      "       'TOTAL EQUITY CAPITAL: BHSP3210',\n",
       "       'FIRST COMPONENT OF OTHER SIGNIFICANT OFF-BALANCE SHEET ITEMS THAT IS OVER 25% OF TOTAL EQUITY CAPITAL (3210)',\n",
       "       'SECOND COMPONENT OF OTHER SIGNIFICANT OFF-BALANCE SHEET ITEMS THAT IS OVER 25% OF TOTAL EQUITY CAPITAL (3210)',\n",
       "       'THIRD COMPONENT OF OTHER SIGNIFICANT OFF-BALANCE SHEET ITEMS THAT IS OVER 25% OF TOTAL EQUITY CAPITAL (3210)',\n",
