Start looking at net income

--- a/Bank_Project.ipynb
+++ b/Bank_Project.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "        "
    ]
   },
@@ -107,9 +108,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 159,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NET INCOME (LOSS): BHBC4340\n",
+      "NET IMPACT ON NET INCOME (BEFORE TAXES) OF THE SALE OF OTHER ASSETS WITH RECOURSE\n",
+      "NET IMPACT ON NET INCOME (BEFORE TAXES) OF LOAN ASSETS THAT WERE SOLD WITH RECOURSE\n",
+      "NET IMPACT ON NET INCOME (BEFORE TAXES) OF DEFEASED DEBT\n",
+      "NET INCOME (LOSS): BHCK4340\n",
+      "NET INCOME BEFORE INCOME TAXES; EXTRAORDINARY ITEMS; AND OTHER ADJUSTMENTS ON A FULLY TAXABLE EQUIVALENT BASIS\n",
+      "NET INCOME FOR ALL INSURANCE-RELATED ACTIVITIES\n",
+      "NET INCOME: BHCKC246\n",
+      "NET INCOME: BHCKC250\n",
+      "LESS: NET INCOME (LOSS) ATTRIBUTABLE TO NONCONTROLLING (MINORITY) INTERESTS\n",
+      "NET INCOME (LOSS) ATTRIBUTABLE TO BANK AND NONCONTROLLING MINORITY INTERESTS\n",
+      "NET INCOME FROM SERVICE CORPORATION/SUBSIDIARIES (SEE NOTE BELOW)\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - PROVISION FOR DEFERRED INCOME TAXES\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - (GAIN) OR LOSS ON SALES OF ASSETS\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - EQUITY IN UNDISTRIBUTED (EARNINGS) LOSSES OF SUBSIDIARIES\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - EQUITY IN EXTRAORDINARY ITEMS OF SUBSIDIARIES\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - NET CHANGE IN OTHER LIABILITIES\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - NET CHANGE IN OTHER ASSETS\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - OTHER; NET\n",
+      "CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - TOTAL ADJUSTMENTS\n",
+      "NET INCOME (LOSS): BHCP4340\n",
+      "NET INCOME (LOSS): BHCT4340\n",
+      "NET INCOME (LOSS): BHPA4340\n",
+      "NET INCOME (LOSS): BHSP4340\n"
+     ]
+    }
+   ],
    "source": [
     "# create mapper\n",
     "\n",
@@ -120,7 +152,9 @@
     "special_columns = [\n",
     "    'TOTAL ASSETS',\n",
     "    'TOTAL EQUITY',\n",
-    "    'TOTAL EQUITY CAPITAL'\n",
+    "    'TOTAL EQUITY CAPITAL',\n",
+    "    'NET INCOME',\n",
+    "    'NET INCOME (LOSS)'\n",
     "    ]\n",
     "\n",
     "def get_name_from_full_code(fullcode, df):\n",
@@ -147,10 +181,10 @@
     "disambig_column_mapper = disambiguate_column_mapper(column_mapper, special_columns)\n",
     "\n",
     "#check to make sure columns have been renamed\n",
-    "\n",
-    "#for key,value in disambig_column_mapper.items():\n",
-    "    #if 'TOTAL EQUITY CAPITAL' in str(value):\n",
-    "        #print(value)\n",
+    "column_name_in_question = 'NET INCOME'\n",
+    "for key,value in disambig_column_mapper.items():\n",
+    "    if column_name_in_question in str(value):\n",
+    "        print(value)\n",
     "    \n",
     "\n",
     "\n",
@@ -159,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,34 +203,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['TOTAL EQUITY CAPITAL: BHCK3210',\n",
-      "       'FIRST COMPONENT OF OTHER SIGNIFICANT OFF-BALANCE SHEET ITEMS THAT IS OVER 25% OF TOTAL EQUITY CAPITAL (3210)',\n",
-      "       'SECOND COMPONENT OF OTHER SIGNIFICANT OFF-BALANCE SHEET ITEMS THAT IS OVER 25% OF TOTAL EQUITY CAPITAL (3210)',\n",
-      "       'THIRD COMPONENT OF OTHER SIGNIFICANT OFF-BALANCE SHEET ITEMS THAT IS OVER 25% OF TOTAL EQUITY CAPITAL (3210)',\n",
-      "       'FOURTH COMPONENT OF OTHER SIGNIFICANT OFF-BALANCE SHEET ITEMS THAT IS OVER 25% OF TOTAL EQUITY CAPITAL (3210)',\n",
-      "       'TOTAL EQUITY CAPITAL INCLUDING NONCONTROLLING MINORITY INTERESTS IN CONSOLIDATED SUBSIDIARIES',\n",
-      "       'TOTAL EQUITY CAPITAL: BHCP3210', 'TOTAL EQUITY CAPITAL: BHCT3210',\n",
-      "       'TOTAL EQUITY CAPITAL: BHSP3210',\n",
-      "       'FIRST COMPONENT OF OTHER SIGNIFICANT OFF-BALANCE SHEET ITEMS THAT IS OVER 25% OF TOTAL EQUITY CAPITAL (3210)',\n",
-      "       'SECOND COMPONENT OF OTHER SIGNIFICANT OFF-BALANCE SHEET ITEMS THAT IS OVER 25% OF TOTAL EQUITY CAPITAL (3210)',\n",
-      "       'THIRD COMPONENT OF OTHER SIGNIFICANT OFF-BALANCE SHEET ITEMS THAT IS OVER 25% OF TOTAL EQUITY CAPITAL (3210)',\n",
-      "       'FOURTH COMPONENT OF OTHER SIGNIFICANT OFF-BALANCE SHEET ITEMS THAT IS OVER 25% OF TOTAL EQUITY CAPITAL (3210)'],\n",
+      "Index(['NET INCOME (LOSS)', 'NET INCOME (LOSS)',\n",
+      "       'NET INCOME BEFORE INCOME TAXES; EXTRAORDINARY ITEMS; AND OTHER ADJUSTMENTS ON A FULLY TAXABLE EQUIVALENT BASIS',\n",
+      "       'NET INCOME', 'NET INCOME',\n",
+      "       'LESS: NET INCOME (LOSS) ATTRIBUTABLE TO NONCONTROLLING (MINORITY) INTERESTS',\n",
+      "       'NET INCOME (LOSS) ATTRIBUTABLE TO BANK AND NONCONTROLLING MINORITY INTERESTS',\n",
+      "       'CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - PROVISION FOR DEFERRED INCOME TAXES',\n",
+      "       'CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - (GAIN) OR LOSS ON SALES OF ASSETS',\n",
+      "       'CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - EQUITY IN UNDISTRIBUTED (EARNINGS) LOSSES OF SUBSIDIARIES',\n",
+      "       'CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - NET CHANGE IN OTHER LIABILITIES',\n",
+      "       'CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - NET CHANGE IN OTHER ASSETS',\n",
+      "       'CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - OTHER; NET',\n",
+      "       'CASH FLOWS FROM OPERATING ACTIVITIES: ADJUSTMENTS TO RECONCILE NET INCOME TO NET CASH PROVIDED BY OPERATING ACTIVITIES - TOTAL ADJUSTMENTS',\n",
+      "       'NET INCOME (LOSS)', 'NET INCOME (LOSS)', 'NET INCOME (LOSS)',\n",
+      "       'NET INCOME (LOSS)'],\n",
       "      dtype='object')\n"
      ]
     }
    ],
    "source": [
     "#Column Finder\n",
+    "\n",
     "#print(renamed_dfq2.columns.str.contains('NAME'))\n",
     "\n",
-    "search_string = 'TOTAL EQUITY CAPITAL'\n",
+    "search_string = 'NET INCOME'\n",
     "matching_columns = renamed_dfq2.columns[renamed_dfq2.columns.str.contains(search_string)]\n",
     "print(matching_columns)\n",
     "#print(renamed_dfq2['REPORTING DATE (CC;YR;MO;DA)'])\n",
@@ -225,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,91 +273,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    ENTITY SHORT NAME  TOTAL EQUITY CAPITAL: BHCK3210  \\\n",
-      "0    BREMER FNCL CORP                       1424090.0   \n",
-      "1            HSBC USA                             NaN   \n",
-      "2     FIRST NAT OF NE                       3466218.0   \n",
-      "3  CENTRAL PACIFIC FC                        557376.0   \n",
-      "4    BNY HOLD DE CORP                             NaN   \n",
-      "\n",
-      "   REPORTING DATE (CC;YR;MO;DA)  \n",
-      "0                      20250331  \n",
-      "1                      20250331  \n",
-      "2                      20250331  \n",
-      "3                      20250331  \n",
-      "4                      20250331  \n",
-      "                                   assets  dates\n",
-      "ENTITY SHORT NAME                               \n",
-      "1867 WESTERN FC                  866858.0      2\n",
-      "1ST SOURCE CORP                 1180024.0      2\n",
-      "ACNB CORP                        391017.0      2\n",
-      "ADAM CORP GRP                   1296886.0      2\n",
-      "ALERUS FC                        523693.5      2\n",
-      "ALLY FNCL                      14389500.0      2\n",
-      "ALPINE BK OF CO                  536117.5      2\n",
-      "AMALGAMATED FNCL CORP            744990.0      2\n",
-      "AMARILLO NAT BC                 1070504.0      2\n",
-      "AMBOY BC                         307716.5      3\n",
-      "AMERANT BC                       915274.5      2\n",
-      "AMERICAN EXPRESS CO            31756500.0      2\n",
-      "AMERICAN NAT CORP                510914.0      2\n",
-      "AMERINATIONAL CMNTY SVCS LLC      76658.5      2\n",
-      "AMERIPRISE FNCL                 5753694.0      2\n",
-      "AMERIS BC                       3870740.0      2\n",
-      "ANB CORP                         167862.5      2\n",
-      "APPLE FNCL HOLD                 1493050.5      2\n",
-      "ARBOR BC                         373170.5      2\n",
-      "ARROW FC                         406457.5      2\n",
-      "ARVEST BK GRP                   2050181.5      2\n",
-      "ASSOCIATED BANC-CORP            4733669.5      2\n",
-      "ATLANTIC UNION BSHRS CORP       4008927.5      2\n",
-      "AUSTIN BC                        444112.5      2\n",
-      "AXOS FNCL                       2642287.0      2\n",
-      "BANC OF CA                      3474249.5      2\n",
-      "BANCFIRST CORP                  1700432.5      2\n",
-      "BANCORP                          844976.5      2\n",
-      "BANCPLUS CORP                    808581.5      2\n",
-      "BANGOR BC MHC                    473630.5      2\n",
-      "BANK FIRST CORP                  630373.5      2\n",
-      "BANK OF AMER CORP             297590000.0      2\n",
-      "BANK OF HI CORP                 1724021.0      2\n",
-      "BANK OF MARIN BC                 439052.0      2\n",
-      "BANK OF NY MELLON CORP         43534500.0      2\n",
-      "BANK7 CORP                       226759.5      2\n",
-      "BANKUNITED                      2925300.0      2\n",
-      "BANKWELL FNCL GRP                279252.0      2\n",
-      "BANNER CORP                     1849558.5      2\n",
-      "BANTERRA CORP                    157414.5      2\n",
-      "BAR HARBOR BSHRS                 468085.5      2\n",
-      "BARCLAYS US LLC                17282000.0      2\n",
-      "BCB BC                           315228.5      2\n",
-      "BCI FNCL GRP                    2665929.5      2\n",
-      "BEACON BC                        450791.5      2\n",
-      "BERKSHIRE HILLS BC              1209535.5      2\n",
-      "BESSEMER GRP                     667044.5      2\n",
-      "BIG POPPY HOLDS                  430314.5      2\n",
-      "BLUE RIDGE BSHRS                 341277.0      3\n",
-      "BMO FNCL CORP                  37927294.5      2\n"
+      "                        assets  dates  net_income\n",
+      "ENTITY SHORT NAME                                \n",
+      "ACNB CORP             391017.0      2      -141.5\n",
+      "CAPITAL ONE FC      87248851.5      2   1517926.0\n",
+      "CHOICEONE FS          429414.5      2       448.0\n",
+      "CONNECTONE BC        1374685.0      2      4542.0\n",
+      "EVERBANK FNCL CORP   3704783.0      2    -37161.0\n",
+      "FIRST BUSEY CORP     2296076.0      2     16285.0\n",
+      "HOPE BC              2192075.0      2     -9020.0\n",
+      "NBT BC               1685470.5      2     -4546.0\n",
+      "OLD NAT BC           7330520.5      2    -33795.0\n",
+      "UNITED BSHRS         5339495.0      4     -9785.0\n",
+      "WESBANCO             3800399.5      2    -33155.0\n"
      ]
     }
    ],
    "source": [
     "#print(union_df[union_df['ENTITY SHORT NAME'] == target_bank])\n",
-    "filtered_df = union_df[['ENTITY SHORT NAME','TOTAL EQUITY CAPITAL: BHCK3210','REPORTING DATE (CC;YR;MO;DA)']].copy()\n",
+    "filtered_df = union_df[['ENTITY SHORT NAME','TOTAL EQUITY CAPITAL: BHCK3210','NET INCOME (LOSS): BHBC4340','REPORTING DATE (CC;YR;MO;DA)']].copy()\n",
     "#filtered_df = filtered_df[filtered_df['TOTAL ASSETS'] > 0]\n",
-    "print(filtered_df.head())\n",
+    "#print(filtered_df.head())\n",
     "grouped_df = filtered_df.groupby(['ENTITY SHORT NAME']).agg(\n",
     "    assets = ('TOTAL EQUITY CAPITAL: BHCK3210',\"mean\"),\n",
-    "    dates = ('REPORTING DATE (CC;YR;MO;DA)' , 'count')\n",
+    "    dates = ('REPORTING DATE (CC;YR;MO;DA)' , 'count'),\n",
+    "    net_income = ('NET INCOME (LOSS): BHBC4340', 'mean')\n",
     ")\n",
-    "print(grouped_df[grouped_df['assets'] > 0].head(50))"
+    "net_income_df = grouped_df[(np.isnan(grouped_df['net_income']) == False) & (grouped_df['net_income'] != 0)]\n",
+    "print(net_income_df.head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43    -66310.0\n",
+      "767        0.0\n",
+      "Name: NET INCOME (LOSS): BHBC4340, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calculate volitility of earnings\n",
+    "\n",
+    "VOE_bank = 'WESBANCO'\n",
+    "VOE_df = union_df[union_df['ENTITY SHORT NAME'] == VOE_bank]\n",
+    "\n",
+    "print(VOE_df['NET INCOME (LOSS): BHBC4340'])"
    ]
   }
  ],
