Add some chatGPT code as volitility proof of concept

--- a/Bank_Project.ipynb
+++ b/Bank_Project.ipynb
@@ -312,16 +312,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "43    -66310.0\n",
-      "767        0.0\n",
-      "Name: NET INCOME (LOSS): BHBC4340, dtype: float64\n"
+      "     NET INCOME (LOSS): BHBC4340  REPORTING DATE (CC;YR;MO;DA)\n",
+      "43                      -66310.0                      20250331\n",
+      "767                          0.0                      20250630\n"
      ]
     }
    ],
@@ -331,7 +331,65 @@
     "VOE_bank = 'WESBANCO'\n",
     "VOE_df = union_df[union_df['ENTITY SHORT NAME'] == VOE_bank]\n",
     "\n",
-    "print(VOE_df['NET INCOME (LOSS): BHBC4340'])"
+    "print(VOE_df[['NET INCOME (LOSS): BHBC4340','REPORTING DATE (CC;YR;MO;DA)']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     entity      std_abs  mean_abs        cv  std_pctchg\n",
+      "0  WESBANCO  46888.25066  -33155.0 -1.414214         NaN\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/17/1lp6v8rx7hg46v35nrbf4mk00000gn/T/ipykernel_7843/2939093299.py:31: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  volatility = vol_df.groupby('entity').apply(compute_volatility).reset_index()\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CHAT GPT Code  \n",
+    "s = (VOE_df['REPORTING DATE (CC;YR;MO;DA)']\n",
+    "     .astype(str)\n",
+    "     .str.strip()\n",
+    "     .str.replace(r'\\D+', '', regex=True)   # remove any separators just in case\n",
+    "     .str.zfill(8))\n",
+    "\n",
+    "vol_df = VOE_df.rename(columns={\n",
+    "    'ENTITY SHORT NAME': 'entity',\n",
+    "    'NET INCOME (LOSS): BHBC4340': 'net_income',\n",
+    "    'REPORTING DATE (CC;YR;MO;DA)': 'report_date'\n",
+    "})\n",
+    "\n",
+    "# Convert types\n",
+    "vol_df['report_date'] = pd.to_datetime(s, format=\"%Y%m%d\", errors='raise')  # adjust format if needed\n",
+    "vol_df = vol_df.sort_values(['entity','report_date'])\n",
+    "\n",
+    "# Group by entity and compute volatility metrics\n",
+    "def compute_volatility(g):\n",
+    "    # Ensure sorted by date\n",
+    "    g = g.set_index('report_date').sort_index()\n",
+    "    eps = g['net_income'].dropna()\n",
+    "    pctchg = eps.pct_change().dropna()\n",
+    "    return pd.Series({\n",
+    "        'std_abs': eps.std(),\n",
+    "        'mean_abs': eps.mean(),\n",
+    "        'cv': (eps.std() / eps.mean()) if eps.mean()!=0 else None,\n",
+    "        'std_pctchg': pctchg.std()\n",
+    "    })\n",
+    "\n",
+    "volatility = vol_df.groupby('entity').apply(compute_volatility).reset_index()\n",
+    "\n",
+    "print(volatility.head())"
    ]
   }
  ],
