--- a/Build_Data_source.ipynb
+++ b/Build_Data_source.ipynb
@@ -56,53 +56,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/17/1lp6v8rx7hg46v35nrbf4mk00000gn/T/ipykernel_9939/2062334360.py:9: DtypeWarning: Columns (2088,2089,2091,2092,2094,2095,2098,2099,2100,2101,2132,2141,2151,2152,2153,2154,2155,2156,2157,2158,2160,2161,2162,2163,2165,2166,2167,2171,2173,2174,2177,2178,2179,2181,2183,2184,2185,2200,2201,2202,2203,2204,2205,2206,2207,2208,2215,2216,2217,2219,2220,2221,2222) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file_path, delimiter = '^', encoding=encoding)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data/BHCF20250630 3.txt ascii (3749, 2224)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/17/1lp6v8rx7hg46v35nrbf4mk00000gn/T/ipykernel_9939/2062334360.py:9: DtypeWarning: Columns (2088,2089,2092,2097,2100,2101,2141,2152,2153,2154,2157,2158,2167,2185,2201,2202,2203,2204,2205,2206,2207,2208,2216,2219,2220,2221,2222) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file_path, delimiter = '^', encoding=encoding)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data/BHCF20250331.txt ascii (462, 2224)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/17/1lp6v8rx7hg46v35nrbf4mk00000gn/T/ipykernel_9939/2062334360.py:9: DtypeWarning: Columns (2088,2089,2091,2095,2097,2098,2099,2100,2101,2132,2141,2151,2152,2153,2154,2155,2156,2157,2158,2159,2160,2161,2162,2163,2165,2166,2167,2171,2174,2178,2184,2185,2186,2187,2200,2201,2202,2203,2204,2205,2206,2208,2216,2219,2223) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file_path, delimiter = '^', encoding=encoding)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data/BHCF20241231.txt ISO-8859-1 (3804, 2224)\n",
-      "Data/BHCF20250930.txt ascii (55, 2224)\n"
+      "Data/BHCF20250630 3.txt\n",
+      "ascii (3749, 2224)\n",
+      "Data/BHCF20231231.txt\n",
+      "ascii (3813, 2279)\n",
+      "Data/BHCF20230930.txt\n",
+      "ascii (448, 2279)\n",
+      "Data/BHCF20240630.txt\n",
+      "ascii (3829, 2224)\n",
+      "Data/BHCF20240331.txt\n",
+      "ascii (454, 2224)\n",
+      "Data/BHCF20250331.txt\n",
+      "ascii (462, 2224)\n",
+      "Data/BHCF20240930.txt\n",
+      "ascii (446, 2224)\n",
+      "Data/BHCF20241231.txt\n",
+      "ISO-8859-1 (3804, 2224)\n",
+      "Data/BHCF20230630.txt\n",
+      "ascii (3887, 2328)\n",
+      "Data/BHCF20250930.txt\n",
+      "ascii (55, 2224)\n",
+      "Data/BHCF20230331.txt\n",
+      "ascii (444, 2328)\n"
      ]
     }
    ],
@@ -112,13 +94,31 @@
     "\n",
     "df_list = []\n",
     "for file_path in all_files:\n",
+    "    print(file_path)\n",
     "    raw_data = open(file_path, 'rb').read()\n",
     "    result = chardet.detect(raw_data)\n",
     "    encoding = result['encoding']\n",
-    "    df = pd.read_csv(file_path, delimiter = '^', encoding=encoding)\n",
+    "    df = pd.read_csv(file_path, delimiter = '^', encoding=encoding, engine='python', on_bad_lines='skip')\n",
     "    df_list.append(df)\n",
-    "    print(file_path,encoding,df.shape)\n",
+    "    print(encoding,df.shape)\n",
     "combined_df = pd.concat(df_list, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(21391, 2328)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(combined_df.shape)"
    ]
   }
  ],
